--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "noia-ui",
   "version": "1.0.0",
-  "devDependencies": {
-    "lerna": "^4.0.0"
+  "license": "MIT",
+  "private": true,
+  "workspaces": {
+    "packages": [
+      "packages/*",
+      "website"
+    ]
+  },
+  "scripts": {
+    "start": "cd ./website && yarn start"
   }
 }
