--- a/website/package.json
+++ b/website/package.json
@@ -19,9 +19,11 @@
     "@mdx-js/react": "^1.6.21",
     "@svgr/webpack": "^5.5.0",
     "clsx": "^1.1.1",
+    "docusaurus-plugin-react-docgen-typescript": "^0.1.0",
     "file-loader": "^6.2.0",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
+    "react-docgen-typescript": "^2.0.0",
     "react-dom": "^17.0.1",
     "url-loader": "^4.1.1"
   },
@@ -36,5 +38,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@docusaurus/module-type-aliases": "^2.0.0-beta.3",
+    "@tsconfig/docusaurus": "^1.0.2",
+    "@types/react": "^17.0.13",
+    "@types/react-helmet": "^6.1.1",
+    "@types/react-router-dom": "^5.1.7",
+    "typescript": "^4.3.5"
   }
 }
