--- a/package.json
+++ b/package.json
@@ -11,9 +11,18 @@
   },
   "scripts": {
     "start": "cd ./website && yarn start",
+    "lint": "eslint ./packages/**/*",
     "g": "yarn plop --plopfile generators/plopfile.js"
   },
   "devDependencies": {
-    "plop": "^2.7.4"
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "plop": "^2.7.4",
+    "prettier": "2.3.2"
   }
 }
