--- a/package.json
+++ b/package.json
@@ -15,7 +15,14 @@
     "g": "yarn plop --plopfile generators/plopfile.js",
     "prepare": "husky install"
   },
+  "dependencies": {
+    "react": "^17.0.1",
+    "styled-components": "^5.3.0",
+    "polished": "^4.1.3"
+  },
   "devDependencies": {
+    "@types/react": "^17.0.13",
+    "@types/styled-components": "^5.1.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "eslint": "^7.30.0",
