--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "cross-env": "^7.0.3",
     "polished": "^4.1.3",
     "react": "^17.0.1",
     "styled-components": "^5.3.0"
