chore: workaround to build docusaurus in monorepo

--- a/website/package.json
+++ b/website/package.json
@@ -2,6 +2,9 @@
   "name": "@noia-ui/docs",
   "version": "1.0.0",
   "private": true,
+  "resolutions": {
+    "terser": "4.8.0"
+  },
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
