--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test:watch": "jest --watch --maxWorkers=25%"
   },
   "dependencies": {
+    "@xstyled/styled-components": "^3.0.3",
     "cross-env": "^7.0.3",
     "polished": "^4.1.3",
     "react": "^17.0.1",
